# advent-of-code

./: .gitignore  Session.vim  helpers.py  main.py
2022/Day 1/: data.py  main.py
year_2021/day_1/: data.py  main.py
year_2021/day_2/: data.py  main.py
year_2021/day_3/: data.py  main.py
year_2021/day_9/: data.py  main.py
year_2022/day_1/: main.py
year_2022/day_10/: data.py  main.py
year_2022/day_11/: data.py  main.py
year_2022/day_12/: data.py  main.py
year_2022/day_13/: data.py  main.py
year_2022/day_14/: data.py  main.py
year_2022/day_1_family/: data.py  main.py
year_2022/day_2/: data.py  main.py
year_2022/day_3/: data.py  main.py
year_2022/day_4/: data.py  main.py
year_2022/day_5/: data.py  main.py
year_2022/day_6/: data.py  main.py
year_2022/day_7/: data.py  main.py
year_2022/day_8/: data.py  main.py
year_2022/day_9/: data.py  main.py
year_2023/: CHANGELOG.md  Session.vim  year2023.cabal
year_2023/aoc/: AOC.hs
year_2023/app/: Main.hs
year_2023/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
year_2023/dist-newstyle/packagedb/ghc-9.4.7/: package.cache  year2023-0.1.0.0-inplace-aoc.conf  year2023-0.1.0.0-inplace-solutions.conf  year2023-0.1.0.0-inplace.conf
year_2023/solutions/Days/: Day01.hs  Day02.hs  Day03.hs  Day03.py  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day07.py  Day08.hs  Day08.py  Day09.hs  Day09.py
